--- a/weatherApp/MainPage/View/Base.lproj/Main.storyboard
+++ b/weatherApp/MainPage/View/Base.lproj/Main.storyboard
@@ -22,16 +22,16 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="116.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bni-Kc-pnc" userLabel="Add View">
-                                        <rect key="frame" x="354" y="66.5" width="30" height="30"/>
+                                        <rect key="frame" x="354" y="69" width="30" height="30"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IDu-tl-Pjr" userLabel="Add Button">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IDu-tl-Pjr" userLabel="Add Button">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                <state key="normal" image="add"/>
                                                 <connections>
                                                     <action selector="addCity:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h6F-ST-NHQ"/>
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="IDu-tl-Pjr" secondAttribute="bottom" id="36z-m0-lOz"/>
                                             <constraint firstAttribute="trailing" secondItem="IDu-tl-Pjr" secondAttribute="trailing" id="HT6-5Y-b8u"/>
@@ -42,21 +42,21 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nKb-By-yPL" userLabel="Refresh View">
-                                        <rect key="frame" x="30" y="66.5" width="30" height="30"/>
+                                        <rect key="frame" x="30" y="71.5" width="25" height="25"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0j-cm-Cgt" userLabel="Refresh Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                                <state key="normal" image="refresh"/>
                                                 <connections>
                                                     <action selector="resfreshInfo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fml-YU-xVd"/>
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="Z0j-cm-Cgt" firstAttribute="top" secondItem="nKb-By-yPL" secondAttribute="top" id="9fD-TV-tew"/>
-                                            <constraint firstAttribute="width" constant="30" id="EYv-Cb-Jqg"/>
+                                            <constraint firstAttribute="width" constant="25" id="EYv-Cb-Jqg"/>
                                             <constraint firstAttribute="bottom" secondItem="Z0j-cm-Cgt" secondAttribute="bottom" id="Evw-QI-1oW"/>
-                                            <constraint firstAttribute="height" constant="30" id="Zxs-de-rfq"/>
+                                            <constraint firstAttribute="height" constant="25" id="Zxs-de-rfq"/>
                                             <constraint firstAttribute="trailing" secondItem="Z0j-cm-Cgt" secondAttribute="trailing" id="dSo-5U-wDo"/>
                                             <constraint firstItem="Z0j-cm-Cgt" firstAttribute="leading" secondItem="nKb-By-yPL" secondAttribute="leading" id="jx2-JO-hRw"/>
                                         </constraints>
@@ -64,14 +64,14 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="Bni-Kc-pnc" secondAttribute="bottom" constant="20" id="Vel-3o-Q18"/>
+                                    <constraint firstItem="Bni-Kc-pnc" firstAttribute="centerY" secondItem="nKb-By-yPL" secondAttribute="centerY" id="Cz3-1N-vFL"/>
                                     <constraint firstAttribute="trailing" secondItem="Bni-Kc-pnc" secondAttribute="trailing" constant="30" id="aLw-ys-J1g"/>
                                     <constraint firstAttribute="bottom" secondItem="nKb-By-yPL" secondAttribute="bottom" constant="20" id="aRQ-hh-VZC"/>
                                     <constraint firstItem="nKb-By-yPL" firstAttribute="leading" secondItem="o99-Xf-GgG" secondAttribute="leading" constant="30" id="pug-eh-mLj"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nd2-TK-dzT" userLabel="Cities View">
-                                <rect key="frame" x="0.0" y="116.5" width="414" height="779.5"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nd2-TK-dzT" userLabel="Cities Table View">
+                                <rect key="frame" x="15" y="116.5" width="384" height="779.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -79,19 +79,26 @@
                         <constraints>
                             <constraint firstItem="nd2-TK-dzT" firstAttribute="top" secondItem="o99-Xf-GgG" secondAttribute="bottom" id="4Vz-pp-XFW"/>
                             <constraint firstItem="o99-Xf-GgG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="D12-Km-xhk"/>
-                            <constraint firstItem="nd2-TK-dzT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="I7C-eM-So6"/>
+                            <constraint firstItem="nd2-TK-dzT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="I7C-eM-So6"/>
                             <constraint firstItem="o99-Xf-GgG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QO9-HD-IRU"/>
                             <constraint firstAttribute="bottom" secondItem="nd2-TK-dzT" secondAttribute="bottom" id="Z9J-Li-yV0"/>
                             <constraint firstItem="o99-Xf-GgG" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.13" id="in3-qb-Rov"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nd2-TK-dzT" secondAttribute="trailing" id="l5z-EL-TQI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nd2-TK-dzT" secondAttribute="trailing" constant="15" id="l5z-EL-TQI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="o99-Xf-GgG" secondAttribute="trailing" id="xuo-JA-bct"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="citiesTableView" destination="nd2-TK-dzT" id="grm-rL-hiY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="47.826086956521742" y="20.758928571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="add" width="256" height="256"/>
+        <image name="refresh" width="256" height="256"/>
+    </resources>
 </document>
